text alignments fixed

--- a/portfolio-site/stylesheets/main.scss
+++ b/portfolio-site/stylesheets/main.scss
@@ -21,6 +21,9 @@ h2 {
   font-size: 35px;
   font-weight: 300;
 }
+.text-left {
+  text-align: left;
+}
 
 /* Header */
 header {
@@ -348,7 +351,7 @@ border-bottom: 3px solid white;
   }
     .card {
 
-     width: 200px; 
+     width: 200px;
       margin: 15px;
       text-align: center;
       transition: 1s;
@@ -362,9 +365,7 @@ border-bottom: 3px solid white;
         font-size: 18px;
         text-transform: uppercase;
       }
-      p {
-        text-align: left;
-      }
+
   }
 
 
@@ -389,8 +390,8 @@ border-bottom: 3px solid white;
     .about-content {
 
       z-index: 5;
-      width: 90%;
-      max-width: 770px;
+      width: 98%;
+      max-width: 780px;
       padding: 10px;
       margin: 0 auto;
       text-align: center;
